<resources>
    <string name="app_name">Homework-8-UserActivity</string>
    <string name="users_activity">Users Activity</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="add_user">Add User</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_email">Enter email</string>
    <string name="btn_save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>