<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserActivity"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="60dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name"
        android:textColor="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name"
        android:textColor="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:textColor="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/error_message"
        android:gravity="center" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnSaveInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="60dp"
        android:maxHeight="60dp"
        android:scaleType="fitCenter"
        android:src="@drawable/save_icon"
        android:background="@drawable/btn_background"
        android:layout_marginTop="400dp" />

</androidx.appcompat.widget.LinearLayoutCompat>