<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/user_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:layout_marginBottom="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirstNameOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User Name"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFirstName"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/tvLastNameOutput"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastNameOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User Last Name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvFirstName"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmailOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="User Email"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnEdit"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitCenter"
        android:src="@drawable/pencil_icon"
        android:background="@color/user_background"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnDelete"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitCenter"
        android:src="@drawable/delete_icon"
        android:background="@color/user_background"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>